Fix website RemoteSource URL bug

--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -111,10 +111,8 @@ export function random<T>(g?: Partial<IRandomGenerator>): T;
   </Alert>
 </Stack>
 
-
-
-
 ## Transformation
+
 <br/>
 <iframe src="https://www.youtube.com/embed/WM6LGy2UU6s?si=lZrqbILxHI22QwEE" 
         title="Typia Tutorial Video" 
@@ -137,7 +135,7 @@ import typia, { tags } from "typia";
 export const checkString = typia.createIs<string>();
 
 //----
-// examples/checkUUID.js
+// examples/checkString.js
 //----
 import typia from "typia";
 export const checkString = (() => {
@@ -145,10 +143,8 @@ export const checkString = (() => {
 })();
 ```
 
-
-
-
 ## Sponsors
+
 Thanks for your support.
 
 Your donation encourages `typia` development.
