--- a/website/pages/docs/random.mdx
+++ b/website/pages/docs/random.mdx
@@ -45,14 +45,14 @@ When you call the `typia.random<T>()` function, `typia` will analyze your type `
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
     <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/random.ts" 
-      filename="examples/src/random.ts" 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/random/random.ts" 
+      filename="examples/src/random/random.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
     <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/random.js" 
-      filename="examples/bin/random.js" 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/random/random.js" 
+      filename="examples/bin/random/random.js" 
       showLineNumbers />
   </Tabs.Tab>
 </Tabs>
@@ -103,19 +103,19 @@ For reference, whether you choose [Type Tags](./validators/tags#type-tags) or [C
 ]}>
   <Tabs.Tab>
     <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/random-tag.ts" 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/random/random-tag.ts" 
       filename="examples/src/random-tag.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
     <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/random-tag-comment.ts" 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/random/random-tag-comment.ts" 
       filename="examples/src/random-tag-comment.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
     <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/random-tag.js" 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/random/random-tag.js" 
       filename="examples/bin/random-tag.js" 
       showLineNumbers />
   </Tabs.Tab>
@@ -165,13 +165,13 @@ For reference, when defining custom type tag, `typia` enforces user to define `v
 <Tabs items={['TypeScript Source Code', 'Compiled JavaScript File']}>
   <Tabs.Tab>
     <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/random-custom.ts" 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/src/random/random-custom.ts" 
       filename="examples/src/random-custom.ts" 
       showLineNumbers />
   </Tabs.Tab>
   <Tabs.Tab>
     <RemoteSource 
-      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/random-custom.js" 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/examples/bin/random/random-custom.js" 
       filename="examples/bin/random-custom.js" 
       showLineNumbers />
   </Tabs.Tab>
