--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -4,10 +4,8 @@ title: Home
 import HomeLayout from "../src/components/home/HomeLayout";
 import HomeStrengthMovie from "../src/movies/home/HomeStrengthMovie";
 
-
-
-
 ## Transformer
+
 ![Typia Logo](/logo.png)
 
 <center>
@@ -28,7 +26,7 @@ import typia, { tags } from "typia";
 export const checkString = typia.createIs<string>();
 
 //----
-// examples/checkUUID.js
+// examples/checkString.js
 //----
 import typia from "typia";
 export const checkString = (() => {
@@ -36,18 +34,14 @@ export const checkString = (() => {
 })();
 ```
 
-
-
-
 ## Key Features
+
 <HomeLayout>
   <HomeStrengthMovie />
 </HomeLayout>
 
-
-
-
 ## Sponsors
+
 Thanks for your support.
 
 Your donation encourages `typia` development.
