--- a/website/pages/docs/validators/functional.mdx
+++ b/website/pages/docs/validators/functional.mdx
@@ -27,14 +27,10 @@ export namespace functional {
 ```
   </Tabs.Tab>
   <Tabs.Tab>
-```typescript showLineNumbers
-export class TypeGuardError extends Error {
-  public readonly method: string;
-  public readonly path: string | undefined;
-  public readonly expected: string;
-  public readonly value: any;
-}
-```
+    <RemoteSource 
+      url="https://raw.githubusercontent.com/samchon/typia/refs/heads/master/src/TypeGuardError.ts" 
+      filename="typia/TypeGuardError.ts" 
+      showLineNumbers />
   </Tabs.Tab>
 </Tabs>
 
